<resources>
    <string name="app_name" translatable="false">ZoOm SDK</string>
    <string name="enroll_simple">Enroll User</string>
    <string name="auth_simple">Authenticate User</string>
    <string name="identify_simple">Identify 1:N</string>
    <string name="liveness_check">Liveness Check</string>
    <string name="identity_check">Photo ID Match</string>
    <string name="audit_trail">View Audit Trail</string>
    <string name="design_showcase">Design Showcase</string>
    <string name="delete_enrollment">Delete Enrollment</string>
    <string name="last_results">View Results</string>
    <string name="settings">Settings</string>
    <string name="check_enrollment">Check Enrollment</string>
    <string name="initialization_failed" translatable="false">Initialization failed: %1$s</string>
    <string name="initialization_succeeded" translatable="false">ZoOm is ready to use</string>
    <string name="initializing" translatable="false">Initializing…</string>
    <string name="done" translatable="false">"Done"</string>
    <string name="frame_border_color" translatable="false">"Frame Border Color"</string>
    <string name="frame_background_color" translatable="false">"Frame Background Color"</string>
    <string name="feedback_bar_background_color" translatable="false">"Feedback Bar Background Color"</string>
    <string name="oval_color" translatable="false">"Oval Color"</string>
    <string name="progress_color1" translatable="false">"Progress Spinner Color 1"</string>
    <string name="progress_color2" translatable="false">"Progress Spinner Color 2"</string>
    <string name="set_font" translatable="false">"Set Font"</string>
    <string name="show_guidance_screen" translatable="false">"Show New User Guidance Screen"</string>
    <string name="show_zoom_intro" translatable="false">"Zoom Intro"</string>
    <string name="show_user_locked_screen" translatable="false">"Show In-ZoOm Lockout Screen"</string>
    <string name="show_brand_logo" translatable="false">"Brand Logo"</string>
    <string name="allow_low_light_mode" translatable="false">"Allow Low Light Mode"</string>
    <string name="show_custom_cancel_button" translatable="false">"Custom Cancel Button"</string>
    <string name="connecting_to_server" translatable="false">Uploading\nEncrypted\n3D FaceMap</string>
</resources>
